<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ReSketchware</string>

    <!-- Common words -->
    <string name="common_word_accept">Accept</string>
    <string name="common_word_decline">Decline</string>
    <string name="common_word_cancel">Cancel</string>
    <string name="common_word_create">Create</string>
    <string name="common_word_icon">Icon</string>
    <string name="common_word_projects">Projects</string>
    <string name="common_word_reset">Reset</string>
    <string name="common_word_settings">Settings</string>

    <!-- Compiler -->
    <string name="compiler_delete_temporary_files_message">Deleting temporary files...</string>
    <string name="compiler_aapt2_message">Compiling resources with AAPT2...</string>
    <string name="compiler_aapt2_linking_message">Linking resources with AAPT2...</string>
    <string name="compiler_extract_aapt2_message">Extracting AAPT2 binary file...</string>
    <string name="compiler_extract_libraries_message">Extracting built-in libraries...</string>
    <string name="compiler_d8_message">D8 is running...</string>
    <string name="compiler_merge_dex_message">Merging DEX files...</string>
    <string name="compiler_java_message">Java is compiling...</string>
    <string name="compiler_package_message">Building APK...</string>
    <string name="compiler_sign_message">Signing APK...</string>
    <string name="compiler_title">Your project is compiling...</string>

    <!-- Not implemented view -->
    <!-- Do not translate/edit the word "GitHub", it breaks the application -->
    <string name="not_implemented_title">Not implemented yet</string>
    <string name="not_implemented_message">Follow the news in the GitHub repository.</string>

    <!-- Permissions -->
    <string name="permission_all_files_ask_message">Starting with Android 11, this app needs a new permission to avoid taking ages to build projects.</string>
    <string name="permission_ask_title">Permission required</string>
    <string name="permission_ask_message">This app needs the storage permission to save and load projects.</string>
    <string name="permission_no_title">No permissions</string>
    <string name="permission_no_message">Please give storage permissions to load the projects.</string>

    <!-- New project dialog -->
    <string name="application_name">Application name</string>
    <string name="new_project">New project</string>
    <string name="version_name">Version name</string>
    <string name="version_code">Version code</string>
    <string name="package_name">Package name</string>
    <string name="project_advanced_options">Advanced options</string>

    <!-- Main Activity -->
    <string name="search_projects">Search projects</string>

    <!-- Design Activity -->
    <string name="view">View</string>
    <string name="event">Event</string>
    <string name="component">Component</string>
</resources>